--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.0.35",
     "gatsby-source-filesystem": "^2.0.33",
+    "gatsby-source-wordpress": "^3.0.58",
     "gatsby-transformer-sharp": "^2.1.18",
+    "html-react-parser": "^0.7.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
